--- a/scala/external-service/build.gradle
+++ b/scala/external-service/build.gradle
@@ -15,14 +15,15 @@ plugins {
 
     // Apply the gradle publishing tooling
     id 'com.gradle.plugin-publish' version '0.10.1'
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'maven-publish'
 }
-project.group = 'io.openlaw.protos'
+
 project.version = '0.0.1'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+
+def scalaSuffix = '_2.12'
+def group = 'io.openlaw.protos'
+project.group = group
 
 repositories {
     // Use jcenter and mavenCentral for resolving dependencies.
@@ -30,10 +31,17 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    archiveBaseName = project.name + scalaSuffix
+    manifest {
+        attributes("Implementation-Version": "$version")
+    }
+}
+
 // Library Dependencies
 dependencies {
     // Use the Scala version defined in the scala-builder at https://github.com/openlawteam/scala-builder/blob/master/Dockerfile#L10
-    implementation 'org.scala-lang:scala-library:2.12.11'
+    compile 'org.scala-lang:scala-library:2.12.11'
 
     // Use protobuf compiler to compile scala generated classes
     compile 'com.github.os72:protoc-jar:3.8.0'
@@ -53,34 +61,23 @@ dependencies {
     testRuntimeOnly 'org.scala-lang.modules:scala-xml_2.12:1.2.0'
 }
 
-// Library publication
+// Publishing library to Github Packages
 publishing {
-    publications {
-        pluginPublication (MavenPublication) {
-            from        components.java
-            groupId     project.group
-            artifactId  project.name
-            version     project.version
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/openlawteam/openlaw-protos")
+            credentials {
+                username = project.findProperty("gpr.user") as String ?: System.getenv("USERNAME")
+                password = project.findProperty("gpr.key") as String ?: System.getenv("GITHUB_TOKEN")
+            }
         }
     }
-}
-
-// Bintray configuration
-bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_KEY')
-    pkg {
-        repo = 'openlawos'
-        name = 'external-service'
-        userOrg = user
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/openlawteam/openlaw-protos.git'
-        version {
-            name = 'External Service'
-            desc = 'OpenLaw External Service integration library.'
-            released  = new Date()
-            vcsTag = version
-//            attributes = ['external-service': 'io.openlaw.protos:external-service:${version}']
+    publications {
+        gpr(MavenPublication) {
+            groupId group
+            artifactId "${project.name}$scalaSuffix"
+            version project.version
         }
     }
 }
